feat: Added IZombie (base)